crates/ir/tests/ir/snapshots/main__ir__lower__actors__actor_counter.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module actors__actor_counter

type CounterMsg = Inc#0 | Dec#1 | Get#2(Ref[Int])
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[n3]) -> Option[n3]
import core/list/sort_by as sort_by(List[s5], (s5) -> h5) -> List[s5]
import core/list/filter as filter(List[f1], (f1) -> Bool) -> List[f1]
import core/list/fold as fold(List[s1], t1, (t1, s1) -> t1) -> t1
import core/list/map as map(List[u], (u) -> w) -> List[w]
import core/vec/to_list as to_list(Vec[p8]) -> List[p8]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
import core/actor/spawn as spawn((Mailbox[x9]) -> Unit) -> Ref[x9]
import core/actor/send as send(Ref[a10], a10) -> Unit
import core/actor/receive as receive(Mailbox[j10]) -> j10
declare receive: (Mailbox[j10]) -> j10
declare send: (Ref[a10], a10) -> Unit

fn counter(v0: Mailbox[CounterMsg], v1: Int) -> Never =
  let_join [recur] v2(v3: Mailbox[CounterMsg], v4: Int) =
    let v5: CounterMsg = call receive(v3)
    switch v5 {
      0 ->
        let v6: Int = add_int(v4, 1)
        jump v2(v3, v6)
      1 ->
        let v7: Int = sub_int(v4, 1)
        jump v2(v3, v7)
      2 (v8: Ref[Int]) ->
        let v9: Unit = call send(v8, v4)
        jump v2(v3, v4)
    }
  in
  jump v2(v0, v1)

fn main() -> Unit =
  let v10: (Mailbox[CounterMsg], Int) -> Never = make_closure(counter, [])
  let v11: (Mailbox[CounterMsg], Int) -> Never = v10
  ()
