crates/ir/tests/ir/snapshots/main__ir__lower__actors__actor_map_publication.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module actors__actor_map_publication

type Msg = MapMsg#0(Map[Int, Int], Ref[Int])
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[e3]) -> Option[e3]
import core/list/sort_by as sort_by(List[j5], (j5) -> y4) -> List[j5]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[w10]) -> List[w10]
import core/traversable/sequence as sequence(o[p[r]]) -> p[o[r]]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
import core/actor/spawn as spawn((Mailbox[k12]) -> Unit) -> Ref[k12]
import core/actor/send as send(Ref[n12], n12) -> Unit
import core/actor/receive as receive(Mailbox[w12]) -> w12
import core/actor/actor_ref as actor_ref(Mailbox[g13]) -> Ref[g13]
import core/actor/mailbox as mailbox() -> Mailbox[p13]
import core/map/entries as entries(Map[g13, h13]) -> Vec[(g13, h13)]
import core/map/from_list as from_list(List[(j14, k14)]) -> Map[j14, k14]
import core/list/Cons as Cons(j, List[j]) -> List[j]
declare actor_ref: (Mailbox[g13]) -> Ref[g13]
declare entries: (Map[g13, h13]) -> Vec[(g13, h13)]
declare from_list: (List[(j14, k14)]) -> Map[j14, k14]
declare mailbox: () -> Mailbox[p13]
declare println: (g) -> Unit
declare receive: (Mailbox[w12]) -> w12
declare send: (Ref[n12], n12) -> Unit
declare spawn: ((Mailbox[k12]) -> Unit) -> Ref[k12]

fn build_pairs(v0: Int, v1: Int, v2: List[(Int, Int)]) -> List[(Int, Int)] =
  let_join [recur] v3(v4: Int, v5: Int, v6: List[(Int, Int)]) =
    let_join v13(v9: Bool) =
      if v9 {
        let v10: Int = add_int(v4, 1)
        let v11: (Int, Int) = tuple(v4, v4)
        let v12: List[(Int, Int)] = construct List::Cons#0(v11, v6)
        jump v3(v10, v5, v12)
      } else {
        v6
      }
    in
    let v7: Dict[core/ord.Ord, Int] = get_dict core/ord.Ord[Int]
    let v8: Bool = trait_call core/ord.Ord.lt(v7, v4, v5)
    jump v13(v8)
  in
  jump v3(v0, v1, v2)

fn worker(v14: Mailbox[Msg]) -> Unit =
  let v15: Msg = call receive(v14)
  switch v15 {
    0 (v16: Map[Int, Int], v17: Ref[Int]) ->
      let v18: Vec[(Int, Int)] = call entries(v16)
      let v24: (Int, (Int, Int)) -> Int = make_closure(lambda$40, [])
      let v25: Dict[core/foldable.Foldable, Vec] = get_dict core/foldable.Foldable[Vec]
      let v26: Int = trait_call core/foldable.Foldable.fold(v25, v18, 0, v24)
      let v27: Unit = call send(v17, v26)
      v27
  }

fn main() -> Unit =
  let v29: (Mailbox[Msg]) -> Unit = make_closure(worker, [])
  let v28: Ref[Msg] = call spawn(v29)
  let v30: Mailbox[Int] = call mailbox()
  let v32: List[(Int, Int)] = construct List::Nil#1()
  let v33: List[(Int, Int)] = call build_pairs(0, 10000, v32)
  let v34: Dict[core/eq.Eq, Int] = get_dict core/eq.Eq[Int]
  let v35: Dict[core/hash.Hash, Int] = get_dict core/hash.Hash[Int]
  let v31: Map[Int, Int] = call from_list(v34, v35, v33)
  let v36: Ref[Int] = call actor_ref(v30)
  let v37: Msg = construct Msg::MapMsg#0(v31, v36)
  let v38: Unit = call send(v28, v37)
  let v40: Int = call receive(v30)
  let v39: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
  let v41: Unit = call println(v39, v40)
  v41

fn lambda$40(v19: Int, v20: (Int, Int)) -> Int =
  let v21: Int = tuple_project v20.0
  let v22: Int = tuple_project v20.1
  let v23: Int = add_int(v19, v22)
  v23
