crates/ir/tests/ir/snapshots/main__ir__lower__actors__actor_receive_timeout.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module actors__actor_receive_timeout

type Msg = Ping#0 | Pong#1
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[n3]) -> Option[n3]
import core/list/sort_by as sort_by(List[s5], (s5) -> h5) -> List[s5]
import core/list/filter as filter(List[f1], (f1) -> Bool) -> List[f1]
import core/list/fold as fold(List[s1], t1, (t1, s1) -> t1) -> t1
import core/list/map as map(List[u], (u) -> w) -> List[w]
import core/vec/to_list as to_list(Vec[n10]) -> List[n10]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
import core/actor/receive_timeout as receive_timeout(Mailbox[m12], Int) -> Option[m12]
declare receive_timeout: (Mailbox[m12], Int) -> Option[m12]

fn actor(v0: Mailbox[Msg]) -> Unit =
  let_join [recur] v1(v2: Mailbox[Msg]) =
    let v3: Option[Msg] = call receive_timeout(v2, 5000)
    switch v3 {
      0 (v4: c) ->
        switch v4 {
          0 ->
            jump v1(v2)
          1 ->
            jump v1(v2)
        }
      1 ->
        ()
    }
  in
  jump v1(v0)
