crates/ir/tests/ir/snapshots/main__ir__lower__actors__adapter_reply.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module actors__adapter_reply

type Msg = Get#0(Ref[Int])
type MainMsg = Reply#0(Int)
extern java "krypton.runtime.KryptonIO" println(n10) -> Unit
import core/peek/peek as peek(e) -> e
import core/list/last as last(List[q3]) -> Option[q3]
import core/list/sort_by as sort_by(List[v5], (v5) -> k5) -> List[v5]
import core/list/filter as filter(List[g1], (g1) -> Bool) -> List[g1]
import core/list/fold as fold(List[t1], v1, (v1, t1) -> v1) -> v1
import core/list/map as map(List[v], (v) -> x) -> List[x]
import core/vec/to_list as to_list(Vec[y7]) -> List[y7]
import core/option/Some as Some(c) -> Option[c]
import core/result/Ok as Ok(e) -> Result[d, e]
import core/result/Err as Err(d) -> Result[d, e]
import core/list/Cons as Cons(f, List[f]) -> List[f]
import core/actor/spawn as spawn((Mailbox[z8]) -> Unit) -> Ref[z8]
import core/actor/send as send(Ref[c9], c9) -> Unit
import core/actor/receive as receive(Mailbox[l9]) -> l9
import core/actor/actor_ref as actor_ref(Mailbox[v9]) -> Ref[v9]
import core/actor/mailbox as mailbox() -> Mailbox[e10]
import core/actor/adapter as adapter(Ref[h10], (m10) -> h10) -> Ref[m10]
declare actor_ref: (Mailbox[v9]) -> Ref[v9]
declare adapter: (Ref[h10], (m10) -> h10) -> Ref[m10]
declare mailbox: () -> Mailbox[e10]
declare println: (n10) -> Unit
declare receive: (Mailbox[l9]) -> l9
declare send: (Ref[c9], c9) -> Unit
declare spawn: ((Mailbox[z8]) -> Unit) -> Ref[z8]

fn value_actor(v0: Mailbox[Msg]) -> Unit =
  let v1: Msg = call receive(v0)
  switch v1 {
    0 (v2: Ref[Int]) ->
      let v3: Unit = call send(v2, 42)
      v3
  }

fn main() -> Unit =
  let v5: (Mailbox[Msg]) -> Unit = make_closure(value_actor, [])
  let v4: Ref[Msg] = call spawn(v5)
  let v6: Mailbox[MainMsg] = call mailbox()
  let v8: Ref[MainMsg] = call actor_ref(v6)
  let v11: (Int) -> MainMsg = make_closure(ctor$Reply$33, [])
  let v7: Ref[Int] = call adapter(v8, v11)
  let v12: Msg = construct Msg::Get#0(v7)
  let v13: Unit = call send(v4, v12)
  let v14: MainMsg = call receive(v6)
  switch v14 {
    0 (v15: Int) ->
      let v16: Unit = call println(v15)
      v16
  }

fn ctor$Reply$33(v9: Int) -> MainMsg =
  let v10: MainMsg = construct MainMsg::Reply#0(v9)
  v10
