crates/ir/tests/ir/snapshots/main__ir__lower__actors__ask_timeout.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module actors__ask_timeout

type Msg = Get#0(Ref[Int])
extern java "krypton.runtime.KryptonIO" println(p14) -> Unit
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[e3]) -> Option[e3]
import core/list/sort_by as sort_by(List[j5], (j5) -> y4) -> List[j5]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[w10]) -> List[w10]
import core/traversable/sequence as sequence(o[p[r]]) -> p[o[r]]
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
import core/actor/spawn as spawn((Mailbox[k12]) -> Unit) -> Ref[k12]
import core/actor/ask as ask(Ref[a14], (Ref[o14]) -> a14, Int) -> Result[Timeout, o14]
declare ask: (Ref[a14], (Ref[o14]) -> a14, Int) -> Result[Timeout, o14]
declare println: (p14) -> Unit
declare spawn: ((Mailbox[k12]) -> Unit) -> Ref[k12]

fn dead_actor(v0: Mailbox[Msg]) -> Unit =
  ()

fn main() -> Unit =
  let v2: (Mailbox[Msg]) -> Unit = make_closure(dead_actor, [])
  let v1: Ref[Msg] = call spawn(v2)
  let v5: (Ref[Int]) -> Msg = make_closure(ctor$Get$34, [])
  let v6: Result[Timeout, Int] = call ask(v1, v5, 100)
  switch v6 {
    0 (v7: Int) ->
      let v8: Unit = call println(v7)
      v8
    1 (v9: c) ->
      switch v9 {
        0 ->
          let v10: Unit = call println("timeout")
          v10
      }
  }

fn ctor$Get$34(v3: Ref[Int]) -> Msg =
  let v4: Msg = construct Msg::Get#0(v3)
  v4
