crates/ir/tests/ir/snapshots/main__ir__lower__actors__async_closure.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module actors__async_closure

type Msg = Ping#0(Int, Ref[Int])
extern java "krypton.runtime.KryptonIO" println(m13) -> Unit
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[e3]) -> Option[e3]
import core/list/sort_by as sort_by(List[j5], (j5) -> y4) -> List[j5]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[w10]) -> List[w10]
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
import core/actor/spawn as spawn((Mailbox[g12]) -> Unit) -> Ref[g12]
import core/actor/send as send(Ref[j12], j12) -> Unit
import core/actor/receive as receive(Mailbox[s12]) -> s12
import core/actor/actor_ref as actor_ref(Mailbox[c13]) -> Ref[c13]
import core/actor/mailbox as mailbox() -> Mailbox[l13]
declare actor_ref: (Mailbox[c13]) -> Ref[c13]
declare mailbox: () -> Mailbox[l13]
declare println: (m13) -> Unit
declare receive: (Mailbox[s12]) -> s12
declare send: (Ref[j12], j12) -> Unit
declare spawn: ((Mailbox[g12]) -> Unit) -> Ref[g12]

fn echo(v0: Mailbox[Msg]) -> Unit =
  let v1: Msg = call receive(v0)
  switch v1 {
    0 (v2: Int, v3: Ref[Int]) ->
      let v4: Unit = call send(v3, v2)
      v4
  }

fn apply(v5: (Mailbox[Int]) -> Int, v6: Mailbox[Int]) -> Int =
  let v7: Int = call_closure v5(v6)
  v7

fn main() -> Unit =
  let v9: (Mailbox[Msg]) -> Unit = make_closure(echo, [])
  let v8: Ref[Msg] = call spawn(v9)
  let v10: Mailbox[Int] = call mailbox()
  let v11: Ref[Int] = call actor_ref(v10)
  let v12: Msg = construct Msg::Ping#0(99, v11)
  let v13: Unit = call send(v8, v12)
  let v15: (Mailbox[Int]) -> Int = make_closure(receive, [])
  let v14: Int = call apply(v15, v10)
  let v16: Unit = call println(v14)
  v16
