crates/ir/tests/ir/snapshots/main__ir__lower__actors__async_receive.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module actors__async_receive

type Msg = Ping#0(Int, Ref[Int])
extern java "krypton.runtime.KryptonIO" println(f10) -> Unit
import core/peek/peek as peek(e) -> e
import core/list/last as last(List[q3]) -> Option[q3]
import core/list/sort_by as sort_by(List[v5], (v5) -> k5) -> List[v5]
import core/list/filter as filter(List[g1], (g1) -> Bool) -> List[g1]
import core/list/fold as fold(List[t1], v1, (v1, t1) -> v1) -> v1
import core/list/map as map(List[v], (v) -> x) -> List[x]
import core/vec/to_list as to_list(Vec[y7]) -> List[y7]
import core/option/Some as Some(c) -> Option[c]
import core/result/Ok as Ok(e) -> Result[d, e]
import core/result/Err as Err(d) -> Result[d, e]
import core/list/Cons as Cons(f, List[f]) -> List[f]
import core/actor/spawn as spawn((Mailbox[z8]) -> Unit) -> Ref[z8]
import core/actor/send as send(Ref[c9], c9) -> Unit
import core/actor/receive as receive(Mailbox[l9]) -> l9
import core/actor/actor_ref as actor_ref(Mailbox[v9]) -> Ref[v9]
import core/actor/mailbox as mailbox() -> Mailbox[e10]
declare actor_ref: (Mailbox[v9]) -> Ref[v9]
declare mailbox: () -> Mailbox[e10]
declare println: (f10) -> Unit
declare receive: (Mailbox[l9]) -> l9
declare send: (Ref[c9], c9) -> Unit
declare spawn: ((Mailbox[z8]) -> Unit) -> Ref[z8]

fn echo(v0: Mailbox[Msg]) -> Unit =
  let v1: Msg = call receive(v0)
  switch v1 {
    0 (v2: Int, v3: Ref[Int]) ->
      let v4: Unit = call send(v3, v2)
      v4
  }

fn main() -> Unit =
  let v6: (Mailbox[Msg]) -> Unit = make_closure(echo, [])
  let v5: Ref[Msg] = call spawn(v6)
  let v7: Mailbox[Int] = call mailbox()
  let v8: Ref[Int] = call actor_ref(v7)
  let v9: Msg = construct Msg::Ping#0(42, v8)
  let v10: Unit = call send(v5, v9)
  let v11: Int = call receive(v7)
  let v12: Unit = call println(v11)
  v12
