crates/ir/tests/ir/snapshots/main__ir__lower__actors__monitor_normal_exit.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module actors__monitor_normal_exit

type WorkerMsg = Stop#0
type MainMsg = Exit#0(ActorId, ExitReason)
extern java "krypton.runtime.KryptonIO" println(i15) -> Unit
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[n3]) -> Option[n3]
import core/list/sort_by as sort_by(List[s5], (s5) -> h5) -> List[s5]
import core/list/filter as filter(List[f1], (f1) -> Bool) -> List[f1]
import core/list/fold as fold(List[s1], t1, (t1, s1) -> t1) -> t1
import core/list/map as map(List[u], (u) -> w) -> List[w]
import core/vec/to_list as to_list(Vec[n10]) -> List[n10]
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
import core/actor/ActorId as ActorId(Int) -> ActorId
import core/actor/Crashed as Crashed(String) -> ExitReason
import core/actor/spawn as spawn((Mailbox[v11]) -> Unit) -> Ref[v11]
import core/actor/send as send(Ref[y11], y11) -> Unit
import core/actor/receive as receive(Mailbox[h12]) -> h12
import core/actor/mailbox as mailbox() -> Mailbox[a13]
import core/actor/monitor as monitor(Mailbox[h15], Ref[u14], (ActorId, ExitReason) -> h15) -> Unit
declare mailbox: () -> Mailbox[a13]
declare monitor: (Mailbox[h15], Ref[u14], (ActorId, ExitReason) -> h15) -> Unit
declare println: (i15) -> Unit
declare receive: (Mailbox[h12]) -> h12
declare send: (Ref[y11], y11) -> Unit
declare spawn: ((Mailbox[v11]) -> Unit) -> Ref[v11]

fn worker(v0: Mailbox[WorkerMsg]) -> Unit =
  let v1: WorkerMsg = call receive(v0)
  switch v1 {
    0 ->
      ()
  }

fn main() -> Unit =
  let v2: Mailbox[MainMsg] = call mailbox()
  let v4: (Mailbox[WorkerMsg]) -> Unit = make_closure(worker, [])
  let v3: Ref[WorkerMsg] = call spawn(v4)
  let v8: (ActorId, ExitReason) -> MainMsg = make_closure(ctor$Exit$34, [])
  let v9: Unit = call monitor(v2, v3, v8)
  let v10: WorkerMsg = construct WorkerMsg::Stop#0()
  let v11: Unit = call send(v3, v10)
  let v12: MainMsg = call receive(v2)
  switch v12 {
    0 (v13: ActorId, v14: ExitReason) ->
      switch v14 {
        0 ->
          let v15: Unit = call println("normal exit")
          v15
        1 (v16: String) ->
          let v17: String = concat_string("crashed: ", v16)
          let v18: Unit = call println(v17)
          v18
      }
  }

fn ctor$Exit$34(v5: ActorId, v6: ExitReason) -> MainMsg =
  let v7: MainMsg = construct MainMsg::Exit#0(v5, v6)
  v7
